# nanuq

./: .gitignore  README.md  clean_all.sh  makenanuq
arch/: arch-ADASTRA-INTELv2.fcm  arch-ADASTRA_CRAY.fcm  arch-ADASTRA_INTEL.fcm  arch-ADASTRA_INTEL_OA3.fcm  arch-ADASTRA_INTELv2.fcm  arch-DIBARBOX_NVIDIA.fcm  arch-DIBARBOX_NVIDIA_OA3.fcm  arch-FRAZILO-INTEL.fcm  arch-FRAZILO-ROCm.fcm  arch-FRAZILO.fcm  arch-FRAZILO_OA3.fcm  arch-GUBBE.fcm  arch-IGE1.fcm  arch-IGE1_OA3.fcm  arch-JACKZILLA-NVIDIA.fcm  arch-JACKZILLA-NVIDIA_OA3.fcm  arch-JACKZILLA-NVIDIA__ACC.fcm  arch-JACKZILLA-NVIDIA__NoACC.fcm  arch-JACKZILLA.fcm  arch-LUITEL.fcm  arch-MERLAT.fcm  arch-MERLAT_OA3.fcm  arch-SHAOLIN.fcm  arch-VAARA.fcm
cfgs/generic/: cpp_generic.fcm
cfgs/generic_cpl_oce/: cpp_generic_cpl_oce.fcm
mk/: Fadd_keys.sh  Fcheck_archfile.sh  Fcheck_config.sh  Fclean_config.sh  Fdel_keys.sh  Fmake_WORK.sh  Fmake_config.sh  bld.cfg  bldxag.cfg
src/: diawri.F90  eosbn2.F90  lib_fortran.F90  nanuq.f90  nanuqgcm.F90  par_kind.F90  par_oce.F90  step.F90  stpctl.F90  timing.F90
src/ABL/: abl.F90  ablmod.F90  ablrst.F90  par_abl.F90  sbcabl.F90
src/BDY/: bdy.F90  bdydta.F90  bdyice.F90  bdyini.F90  bdylib.F90
src/DOM/: CMakeLists.txt  daymod.F90  dom_oce.F90  domain.F90  dombth.F90  domhgr.F90  dommsk.F90  domutl.F90  domwri.F90  istate.F90  phycst.F90
src/ICE/: ice.F90  ice_util.F90  icealb.F90  icebbc.F90  icecor.F90  icectl.F90  icedia.F90  icedyn.F90  icedyn_rdgrft.F90  iceistate.F90  iceitd.F90  icerst.F90  icesbc.F90  (+12 more)
tests/: HOSTS.bash  TEST-CASES_readme.md  paths_nanuq_data.bash
(+206 files in other folders)
